# CRM

./: CMakeLists.txt  empFile.txt  main.cpp
include/: boss.h  employee.h  manager.h  worker.h  workerManager.h
src/: boss.cpp  employee.cpp  manager.cpp  workerManager.cpp
